force-app/main/default/objects/Offer__c/fields/Discount_in_per__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_per__c</fullName>
    <label>Discount in per</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>