force-app/main/default/objects/Offer__c/fields/EYI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount__c</fullName>
    <label>Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>