force-app/main/default/objects/Offer__c/fields/EYI_Do_not_show_on_Quotation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Do_not_show_on_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not show on Quotation</label>
    <type>Checkbox</type>
</CustomField>