force-app/main/default/objects/Offer__c/fields/Non_Rec__c.field-meta.xml
<CustomField>
    <fullName>Non_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-recoverable</label>
    <type>Checkbox</type>
</CustomField>