force-app/main/default/objects/Offer__c/fields/Offer_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Active_Status__c</fullName>
    <label>Offer Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>