force-app/main/default/objects/Offer__c/fields/Offer_Details__c.field-meta.xml
<CustomField>
    <fullName>Offer_Details__c</fullName>
    <description>Details of the offer</description>
    <label>Offer Details</label>
    <type>TextArea</type>
</CustomField>