force-app/main/default/objects/Offer__c/fields/Offer_type__c.field-meta.xml
<CustomField>
    <fullName>Offer_type__c</fullName>
    <label>Offer type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SD (Stamp Duty)</fullName>
            </value>
            <value>
                <fullName>Referral Discount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>20:80 Scheme</fullName>
                <isActive>false</isActive>
                <label>20:80 Scheme</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>