force-app/main/default/objects/Offer__c/fields/Proposed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_End_Date__c</fullName>
    <description>New End date for the offer which will be send for approval</description>
    <label>Proposed End Date</label>
    <type>Date</type>
</CustomField>