force-app/main/default/objects/Offer__c/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <description>New Start date for the offer which will be send for approval</description>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>