force-app/main/default/objects/Offer__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Loyalty Referral</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>