force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Do_not_show_on_Quotation__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Tower__c</columns>
    <columns>Project__c</columns>
    <columns>Inventory__c</columns>
    <columns>Offer_Active_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>